# _fbx-load-deprecated

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc
src/: connections.rs  error.rs  lib.rs  node_loader.rs  scene.rs  utils.rs
src/definitions/: mod.rs  template.rs
src/fbx_header_extension/: mod.rs
src/objects/: mod.rs  model.rs  pose.rs  properties.rs  texture.rs  video.rs
src/objects/collection/: display_layer.rs  mod.rs
src/objects/deformer/: blend_shape.rs  blend_shape_channel.rs  cluster.rs  mod.rs  skin.rs
src/objects/geometry/: mod.rs  shape.rs
src/objects/geometry/mesh/: layer.rs  layer_element.rs  mod.rs
src/objects/material/: mod.rs  shading_parameters.rs
src/objects/node_attribute/: limb_node.rs  mod.rs  null.rs
src/property/: flags.rs  mod.rs  property_node.rs  property_node_value.rs
